--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos em Vídeo</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto aertigo 001</p>
+            <h2>Como criar um curso em vídeo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui, aspernatur! Fuga, delectus. Veniam neque facere repellat ut reiciendis nostrum praesentium incidunt suscipit rem, libero quidem nesciunt ratione, perspiciatis provident voluptate?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Como criar uma imagem indexada</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus aliquam maiores vitae atque tempore perspiciatis voluptatem iure voluptate quisquam ex, eaque explicabo nisi vero alias corrupti harum quaerat esse aspernatur!</p>
         </article>
     </main>
     
