--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos em Vídeo</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Como criar um curso em vídeo</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HMTL">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui, aspernatur! Fuga, delectus. Veniam neque facere repellat ut reiciendis nostrum praesentium incidunt suscipit rem, libero quidem nesciunt ratione, perspiciatis provident voluptate?</p>
+            <p><a href="">Acesse o Curso de HTML</a></p>
         </article>
         <article>
             <h2>Como criar uma imagem indexada</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso Javascript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus aliquam maiores vitae atque tempore perspiciatis voluptatem iure voluptate quisquam ex, eaque explicabo nisi vero alias corrupti harum quaerat esse aspernatur!</p>
+            <p><a href="">Acesse o Curso de Javascript</a></p>
         </article>
     </main>
     
